--- a/.github/workflows/jd_joy_feed.yml
+++ b/.github/workflows/jd_joy_feed.yml
@@ -2,7 +2,7 @@ name: jd_joy_feed
 
 on:
   schedule:
-    - cron: '* */4 * * *'
+    - cron: '*/3 * * * *'
   watch:
     types: [started]
 jobs:
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:  
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Hello, world! +%Y-%m-%d
